make index page mobile friendly referencing bootstrap 3 example cover page, on smaller screens active users becomes a modal, fix arbitrary margins

--- a/assets/css/sticky-footer.css
+++ b/assets/css/sticky-footer.css
@@ -17,3 +17,8 @@ body {
    height: 60px;
    background-color: #f5f5f5;
 }
+
+.footer p {
+    margin-top: 20px;
+    margin-bottom: 0;
+}
